# RMSNorm-H100

./: LICENSE  README.md  pyproject.toml
benchmarks/results/: gh200-2026-06-08-backward-gates.csv  gh200-2026-06-08-forward-bfloat16.csv  gh200-2026-06-08-forward-float16.csv  gh200-2026-06-08-forward-float32.csv  gh200-2026-06-08-residual-bfloat16.csv  gh200-2026-06-08-residual-float16-n65536.csv  gh200-2026-06-08-residual-fp32-bfloat16.csv  gh200-2026-06-08-residual-fp32-float16-n65536.csv
rmsnorm/: __init__.py  _extension.py  rmsnorm.py
rmsnorm/benchmarks/: __init__.py  benchmark_rmsnorm.py
rmsnorm/csrc/: ptx_rmsnorm_kernels.cu  torch_bindings.cpp
tests/: test_benchmark_helpers.py  test_package_metadata.py  test_rmsnorm_correctness.py
